# metadata-gen

./: CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  audit.toml  codecov.yml  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  check.yml  ci.yml  docs.yml  document.yml  lint.yml  release.yml
benches/: metadata_benchmark.rs
crates/serde_yml/src/: de.rs
examples/: error_example.rs  example.md  lib_example.rs  metadata_example.rs  metatags_example.rs  post.md  utils_example.rs
metadata_gen/: all.html  fn.extract_and_prepare_metadata.html  fn.extract_keywords.html  index.html  sidebar-items.js  type.Keywords.html  type.MetadataMap.html  type.MetadataResult.html
metadata_gen/error/: enum.MetadataError.html  index.html  sidebar-items.js  struct.ContextError.html
metadata_gen/metadata/: fn.extract_metadata.html  fn.process_metadata.html  index.html  sidebar-items.js  struct.Metadata.html
metadata_gen/metatags/: fn.extract_meta_tags.html  fn.generate_metatags.html  fn.meta_tags_to_hashmap.html  index.html  sidebar-items.js  struct.MetaTag.html  struct.MetaTagGroups.html
metadata_gen/utils/: fn.async_extract_metadata_from_file.html  fn.escape_html.html  fn.escape_html_entities.html  fn.unescape_html.html  index.html  sidebar-items.js
search.desc/metadata_gen/: metadata_gen-desc-0-.js
src/: error.rs  lib.rs  metadata.rs  metatags.rs  utils.rs
src/metadata_gen/: error.rs.html  lib.rs.html  metadata.rs.html  metatags.rs.html  utils.rs.html
tests/: test_error.rs  test_integration.rs  test_lib.rs  test_metadata.rs  test_metatags.rs  test_utils.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/alloc/vec/: struct.Vec.js
type.impl/core/result/: enum.Result.js
type.impl/std/collections/hash/map/: struct.HashMap.js
