# -----------------------------------------------------------------------------
# Metadata Gen - A powerful Rust library for extracting, validating, and processing metadata in YAML, TOML, and JSON formats from any content or data file.
# -----------------------------------------------------------------------------

[package]
name = "metadata-gen"
version = "0.0.3"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
description = """
A powerful Rust library for extracting, validating, and processing metadata in YAML, TOML, and JSON formats from any content or data file.
"""
homepage = "https://metadata-gen.com/"
documentation = "https://doc.metadata-gen.com/metadata_gen/"
repository = "https://github.com/sebastienrousseau/metadata-gen"
readme = "README.md"
build = "build.rs"

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------
categories = [
    "command-line-utilities",
    "data-structures",
    "text-processing",
    "parsing",
    "development-tools"
]

keywords = ["metadata", "yaml", "toml", "json", "metadata-gen"]

[lib]
name = "metadata_gen"
path = "src/lib.rs"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
# Dependencies required for building and running the project.
anyhow = "1.0"
dtt = "0.0.9"
quick-xml = "0.39"
regex = "1.12"
scraper = "0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yml = { version = "0.0.12", path = "crates/serde_yml" }
tempfile = "3.27"
thiserror = "2.0"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.50", features = ["full"] }
toml = "0.8"
yaml-rust2 = "0.10"

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9.4"

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------

[dev-dependencies]
# Dependencies required for development, testing, and documentation.
assert_fs = "1.1"
criterion = "0.5"
predicates = "3.1"
serde = { version = "1.0", features = ["derive"] }

# -----------------------------------------------------------------------------
# Examples
# -----------------------------------------------------------------------------

[[example]]
name = "error_example"
path = "examples/error_example.rs"

[[example]]
name = "lib_example"
path = "examples/lib_example.rs"

[[example]]
name = "metadata_example"
path = "examples/metadata_example.rs"

[[example]]
name = "metatags_example"
path = "examples/metatags_example.rs"

[[example]]
name = "utils_example"
path = "examples/utils_example.rs"


# -----------------------------------------------------------------------------
# Criterion Benchmark
# -----------------------------------------------------------------------------

[[bench]]
name = "metadata_benchmark"
harness = false

[profile.bench]
debug = true

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------

[features]
default = []
advanced_parsing = []

# -----------------------------------------------------------------------------
# Release Profile
# -----------------------------------------------------------------------------

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false

# -----------------------------------------------------------------------------
# Documentation Configuration
# -----------------------------------------------------------------------------

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
